# minecraft

./: .clang-format  .editorconfig  CMakeLists.txt  Makefile
resources/models/cube/: cube.blend  cube.blend1  cube.mtl
resources/models/pbr/rusted_sphere/: rusted_sphere.blend  rusted_sphere.blend1  rusted_sphere.mtl
resources/shaders/: axis.frag  axis.vert  basic.frag  basic.vert  blinn_phong.frag  blinn_phong.vert  cube.frag  cube.vert  default.frag  default.vert  dummy_vao.frag  dummy_vao.vert  grid.frag  grid.vert  material.frag  material.vert  ocean.frag  portal.frag  procedural_cell.frag  skeleton.frag  skeleton.vert  texture_only.frag  texture_only.vert
src/: Axis.cpp  Axis.h  Cache.h  Camera.cpp  Camera.h  Config.h  Constants.h  Container.h  DummyVAO.cpp  DummyVAO.h  Engine.cpp  Engine.h  FloorGrid.cpp  FloorGrid.h  GameObject.cpp  GameObject.h  ImGuiManager.cpp  ImGuiManager.h  Light.h  MapUtils.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  OldModel.cpp  OldModel.h  Renderable.h  Shader.cpp  Shader.h  ShaderCache.cpp  ShaderCache.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Texture2D.cpp  (+11 more)
